# model_server

./: .bazeliskrc  .bazelrc  .bazelversion  .clang-format  .coveragerc  .deepsource.toml  .dockerignore  .gitignore  .tf_configure.bazelrc  BINARY_OV_WORKSPACE  BUILD.bazel  CHANGES.md  CHANGES_SUMMARY.md  CODEX_REQUEST.json  CONTRIBUTING.md  Dockerfile  Dockerfile.centos  Dockerfile.clearlinux  Dockerfile.cuda  Dockerfile.debian  Dockerfile.redhat  Dockerfile.ubuntu  DockerfileMakePackage  DockerfileRelease  Dockerfile_ams  Dockerfile_ams_centos  Dockerfile_ams_clearlinux  Dockerfile_binary_openvino  Dockerfile_clearlinux  Dockerfile_intelpython  Dockerfile_openvino_base  Doxyfile  Jenkinsfile  MEDIAPIPE_PYTHON_ARCHITECTURE.md  Makefile  MakefileCapi  OMNI_AUDIO_OUTPUT.md  OMNI_PLAN.md  OWNERS  POC.md  (+62 more)
.circleci/: config.yml
.github/: CODEOWNERS  copilot-instructions.md  depandabot.yml  pull.yml  pull_request_template.md  reapproval-gate.md
capi_files/: Dockerfile.redhat  Dockerfile.ubuntu  MakefileCapi  config.json
ci/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.coverity  Jenkinsfile  bandit.sh  build.sh  buildOnDevelop.groovy  buildOnMain.groovy  buildOnMaster.groovy  build_test_OnCommit.groovy  build_test_OnCommitWin.groovy  build_test_release.groovy  check_coverage.bat  check_md_code_changes.sh  cleanup_jenkins.bat  cleanup_jenkins.py  cleanup_jenkins.xml  cppclean.sh  lib_search.py  list_daily_recompile_jobs.groovy  loadWin.groovy  perf_linux.groovy  style_requirements.txt  testOnCommit.groovy  windows_bdba.bat  windows_sign.bat
client/cpp/kserve-api/: CMakeLists.txt  README.md
client/cpp/kserve-api/samples/: CMakeLists.txt  grpc_async_infer_resnet.cpp  grpc_infer_dummy.cc  grpc_infer_dummy.cpp  grpc_infer_resnet.cc  grpc_infer_resnet.cpp  grpc_model_metadata.cpp  grpc_model_ready.cpp  grpc_server_live.cc  grpc_server_live.cpp  grpc_server_metadata.cpp  grpc_server_ready.cpp  http_async_infer_resnet.cpp  http_infer_dummy.cpp  http_infer_resnet.cpp  http_model_metadata.cpp  http_model_ready.cpp  http_server_live.cpp  http_server_metadata.cpp  http_server_ready.cpp
demos/: README.md  pull_gguf_model.md
deploy/: README.md  grafana_dashboard.json
docs/: API_ReferenceGuide.md  AgeGenderGuide.md  Architecture.md  Contribution.md  DeveloperGuide.md  EnsembleScheduler.md  FaceDetectionScriptExample.md  GettingStarted.md  Guides.md  How To.md  InstallationGuides.md  InstallationsKubernetes.md  InstallationsLinuxDocker.md  InstallationsModelServerVMAndBareMetal.md  ModelServerGRPCAPI.md  ModelServerRESTAPI.md  ModelVersionPolicy.md  PerformanceInformation.md  PreparingModelsRepository.md  Resources.md  ShapeAndBatchSize.md  Troubleshooting.md  accelerators.md  additional_configurations.md  advanced_topics.md  age_gender_guide.md  api_reference_guide.md  architecture.md  benchmark.md  binary_input.md  binary_input_kfs.md  binary_input_layout_and_shape.md  binary_input_ouput.md  binary_input_tfs.md  build_from_source.md  building_plugins.md  camera_example.md  clients.md  clients_genai.md  clients_kfs.md  (+105 more)
example_ams/: get_test_images.sh  requirements-dev.txt  requirements.txt
example_client/: README.md  REST_age_gender.ipynb  camera_client.py  classes.py  client_requirements.txt  client_requirements_py2.txt  client_requirements_py3.txt  client_utils.py  east_ocr_client.py  face_detection.md  face_detection.py  face_detection_performance.py  faces_analysis_pipeline_client.py  get_model_status.py  get_serving_meta.py  grpc_binary_client.py  grpc_binary_input_client.py  grpc_latency.py  grpc_performance.md  grpc_serving_client.py  grpc_start_one_stream.sh  grpc_stateful_client.py  grpc_throughput.sh  image_transformation_client.py  input_images.txt  jpeg_classification.py  lbs.npy  multi_inputs.py  object_detection_client.py  ovms.yaml  people_images_list.txt  rest_binary_client.py  rest_binary_input_client.py  rest_get_model_status.py  rest_get_serving_meta.py  rest_serving_client.py  rest_stateful_client.py  sample.ipynb  test_binary.sh  test_nchw.sh  (+2 more)
example_clients/: README.md
example_k8s/: OVMS_demo.ipynb  README.md  openvino_model_server_gs_rc.yaml  openvino_model_server_rc.yaml  openvino_model_server_resnet.yaml  openvino_model_server_s3_rc.yaml  openvino_model_server_service.yaml
example_sagemaker/: 0001-patch-sagemaker-for-OpenVINO-model-server.patch  Dockerfile  README.md  env.txt
extras/: Dockerfile  grafana_dashboard.json  grafana_mediapipe.json  grafana_mediapipe_dashboard.json  model_config.json
file_lists/: lib_custom_nodes_files.txt  lib_files.txt  lib_files_python.txt  lib_python_files.txt  test_release_files.sh
ie_serving/: Dockerfile  Makefile  config.py  logger.py  main.py  schemas.py  server.py  shm_management.py
iris_pipeline_project/: Dockerfile  convert.py  model_config.json  ovmsmodel.py
kfs/: main.cpp
licensing/: EULA.txt
ovms_env/: pyvenv.cfg
performance_environment/: performance_environment.md
plugins/: Dockerfile
rag_env/: pyvenv.cfg
release_files/: Dockerfile.centos  Dockerfile.centos.add_drivers  Dockerfile.redhat  Dockerfile.ubuntu  Intel_OBL_Internal_Use_License_07302020.docx  Makefile  README.md  license.txt  publish_image_to_docker_hub.sh
src/: BUILD  aliases.hpp  anonymous_input_name.cpp  anonymous_input_name.hpp  assert.hpp  avx_check.hpp  azurefilesystem.cpp  azurefilesystem.hpp  azurestorage.cpp  azurestorage.hpp  binaryutils.cpp  binaryutils.hpp  blobmap.hpp  blobwrapper.hpp  buffer.cpp  buffer.hpp  cleaner_utils.cpp  cleaner_utils.hpp  cli_parser.cpp  cli_parser.hpp  client_connection.hpp  color_format_configuration.cpp  color_format_configuration.hpp  common_settings.bzl  config.cpp  config.h  config.hpp  config_status_utils.cpp  custom_node.cpp  (+358 more)
src/custom_nodes/tokenizer/src/: CMakeLists.txt  detokenizer.cpp  model.cpp  model.hpp  tokenizer.cpp
src/custom_nodes/tokenizer/test/: CMakeLists.txt  detokenization_test.cpp  tokenization_test.cpp
tests/functional/utils/ovms_testing_image/ov/ovms_basic/ovms/: CMakeLists.txt
tests/functional/utils/ovms_testing_image/ov/ovms_basic/ovms/src/: ov.cpp
(+3016 files in other folders)
